--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
                 <div class="row">
                     <div class="col-11 flexbox bg-mainRed d-lg-flex justify-content-center mx-auto py-md-0">
                         <div class="txt__about col-md-5 mx-auto py-lg-0 text-white order2">
-                            <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                            </p>
+                            <p>初めまして、渡部竣太(わたべしゅんた)と申します。</p>
+                            <p>ポートフォリオサイトをご覧いただきありがとうございます。</p>
+                            <p>プログラミングを大学3年の冬に始めて今春に入社し、現在は都内のIT企業に勤めています。</p>
+                            <p class="mb-3">過去の経験</p>
+                            <ul class="ml-5">
+                                <li>某プログラミングスクールでの講師</li>
+                                <li class="my-3">企業HPやLPの制作</li>
+                                <li>スタートアップでのECサイト開発(4ヶ月)</li>
+                                <li class="my-3">入社先での実務経験</li>
+                            </ul>
+                            <p></p>
                         </div>
                         <div class="col-lg-5 text-center">
                             <div class="selfphoto position-relative text-center order1">
@@ -65,9 +72,10 @@
                             </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">Site Coding</p>
-                                <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                                <p>
+                                    HTML、CSS、JavaScriptを用いたWebサイトを制作することができます。
+                                    過去の実績としては、企業HPやLP制作の経験があります。
+                                    当サイトもデザインから実装まで一から制作しました。
                                 </p>
                             </div>
                         </div>
@@ -77,9 +85,9 @@
                             </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">Writing/SEO</p>
-                                <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                                <p>
+                                    WordPressを用いたサイトでメディアを運用しています。
+                                    集客力をあげるのためのSEOに対応した記事の作成、メディアのカスタマイズならお任せください。
                                 </p>
                             </div>
                         </div>
@@ -89,9 +97,9 @@
                             </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">ECsite</p>
-                                <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                                <p>
+                                    過去にスタートアップでShopifyを一からカスタマイズしたD2Cのアパレルサイト作成、運営経験があります。
+                                    ECサイトでの商品販売をお考えの方は気軽にご相談ください。
                                 </p>
                             </div>
                         </div>
@@ -101,9 +109,9 @@
                             </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">Programing</p>
-                                <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                    ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                                <p>
+                                    本職として金融系のシステムエンジニアをしております。主にC#を用いたシステム開発やRPAの導入を行なっております。
+                                    そのほかにもプログラミングスクールにてRails講師の経験、スタートアップではECサイトの実装やPythonでの作業自動化の経験があります。
                                 </p>
                             </div>
                         </div>
@@ -114,8 +122,10 @@
         <section id="products" class="bg-mainGray secpdd pb-5">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-11 bg-mainRed px-0 py-5 d-lg-flex mx-auto">
-                        <h2 class="text-white text-secttl">Productions</h2>
+                    <div class="col-11 bg-mainRed px-0 py-5 d-lg-flex mx-auto text-white">
+                        <h2 class="text-secttl">Productions</h2>
+                        <p class="px-3">個人制作物を一部紹介いたします。</p>
+                        <p class="px-3">この他にも非公開ですが、実務での制作物が複数ございます。</p>
                     </div>
                 </div>
                 <div class="row">
@@ -123,9 +133,10 @@
                         <div class="col-lg-6 pd-txt pt-3 order2">
                             <h5 class="py-4 text-white txt-pdttl">Love and Beer</h5>
                             <p class="text-white">使用フレーム : Rails</p>
-                            <p class="text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                            <p class="text-white">
+                                株式会社サポーターズ主催のハッカソンにて作成しました。
+                                『ビール』がテーマであったため、マイナスワードをビールアイコンに置き換え、乾杯機能で
+                                投稿を削除できるアプリを作成しました。
                             </p>
                         </div>
                         <div class="col-lg-6 text-center order1">
@@ -140,9 +151,9 @@
                         <div class="col-lg-6 pd-txt pt-3 order2">
                             <h5 class="py-4 text-white txt-pdttl">Ideabox</h5>
                             <p class="text-white">使用フレーム : Vue.js (DB：Firebase)</p>
-                            <p class="txt-pd text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                            <p class="txt-pd text-white">
+                                Vue.js学習時に大学4年時に創設したプログラミング団体で使えるアイデア募集アプリを作成しました。
+                                DBにはFirebaseを使用しています。
                             </p>
                         </div>
                         <div class="col-lg-6 text-center order1">
@@ -157,9 +168,8 @@
                         <div class="col-lg-6 pd-txt pt-3 order2">
                             <h5 class="py-4 text-white txt-pdttl">RPG GAME</h5>
                             <p class="text-white">使用言語 : C#</p>
-                            <p class="txt-pd text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
-                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                            <p class="txt-pd text-white">
+                                新卒入社後の研修の合間をぬって学習の定着の目的で制作したRPGのコンソールアプリです。
                             </p>
                         </div>
                         <div class="col-lg-6 text-center order1">
