--- a/sendConfirm.html
+++ b/sendConfirm.html
@@ -27,7 +27,7 @@
         <div id="modal01" class="modal js-modal">
             <div class="modal__bg js-modal-close"></div>
             <div class="modal__content">
-                <p>送信したお。</p>
+                <p>(github.ioでの公開のためメールは送信できません)</p>
                 <a class="text-black js-modal-close" href="" >閉じる</a>
             </div>
         </div>
