--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                 <div class="row">
                     <div class="col-11 bg-mainRed px-0 py-5 d-lg-flex mx-auto text-white">
                         <h2 class="text-secttl">Productions</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-11 bg-mainRed mx-auto text-white">
                         <p class="px-3">個人制作物を一部紹介いたします。</p>
                         <p class="px-3">この他にも非公開ですが、実務での制作物が複数ございます。</p>
                     </div>
